fixed links and descriptions in projects

--- a/projects.html
+++ b/projects.html
@@ -85,10 +85,10 @@
 				<h2 class="fh5co-heading-colored animate-box" data-animate-effect="fadeInLeft">Projects</h2>
 				<div class="row row-bottom-padded-md">
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://klharp.github.io/Project-3-EmissionsPredictor/" target="_blank"
+						<a href="https://klharp.github.io/Greenhouse-Gas-Emissions-Predictor/" target="_blank"
 							class="work image-popup" style="background-image: url(images/predictor.png);">
 							<div class="desc">
-								<h3>Project 3: Carbon Emissions Predictor</h3>
+								<h3>Carbon Emissions Predictor</h3>
 								<span>This project uses machine learning to determine the predictability of carbon
 									emissions in the transportation sector if trends in person vehicle and public
 									transportation continues.</span>
@@ -96,11 +96,11 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://klharp.github.io/Project-2-Neighborhoods-Dashboard-Live/templates/"
+						<a href="https://klharp.github.io/Healthy-Neighborhoods-Dashboard/templates/"
 							target="_blank" class="work image-popup"
 							style="background-image: url(images/neighborhoods.png);">
 							<div class="desc">
-								<h3>Project 2: Health Neighborhoods Dashboard</h3>
+								<h3>Healthy Neighborhoods Dashboard</h3>
 								<span>This dashboard demonstrated how to integrate Flask with HTML and JavaScript code.
 									This version has been converted to not need a Flask server.</span>
 							</div>
@@ -130,19 +130,19 @@
 						<a href="https://github.com/klharp/Project-1-Hypothesis-Testing" target="_blank"
 							class="work image-popup" style="background-image: url(images/happiness.png);">
 							<div class="desc">
-								<h3>Project 1: Hypothesis Testing</h3>
-								<span>Jupyter Notebook used to explore, analyze, and compare datasets from the World
-									Happiness Score and the Social Progress Index.</span>
+								<h3>Hypothesis Testing</h3>
+								<span>Explored, analyzed, and compared datasets from the World
+									Happiness Score and the Social Progress Index. Performed hypothesis testing. </span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://klharp.github.io/plotly-challenge/" target="_blank" class="work image-popup"
+						<a href="https://klharp.github.io/Plotly-Dashboard-Bellybutton-Diversity/" target="_blank" class="work image-popup"
 							style="background-image: url(images/plotly.png);">
 							<div class="desc">
-								<h3>Bootcamp Plotly Challenge</h3>
+								<h3>Plotly Project</h3>
 								<span>Built an interactive dashboard to explore a given dataset. D3, Plotly, Javascript,
-									HTML, and CSS were used in this exercise.</span>
+									HTML, and CSS were used.</span>
 							</div>
 						</a>
 					</div>
@@ -160,53 +160,49 @@
 						<a href="https://github.com/klharp/machine-learning-challenge" target="_blank"
 							class="work image-popup" style="background-image: url(images/knn.jpg);">
 							<div class="desc">
-								<h3>Bootcamp Machine Learning Challenge</h3>
-								<span>Used Scikit-learn using supervised learning to train the model to make a
+								<h3>Machine Learning Project</h3>
+								<span>Used Scikit-learn to train the model to make a
 									prediction.</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://klharp.github.io/web-design-challenge/index.html" target="_blank"
+						<a href="https://klharp.github.io/Web-Visualization-Dashboard/index.html" target="_blank"
 							class="work image-popup" style="background-image: url(images/webvis.png);">
 							<div class="desc">
-								<h3>Bootcamp Web Design Challenge</h3>
-								<span>This data visualization dashboard website using visualizations previous created in
+								<h3>Web Design Example</h3>
+								<span>This data visualization dashboard used visualizations previous created in
 									a past Python assignment.</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://klharp.github.io/javascript-challenge/UFO-level-1/" target="_blank"
+						<a href="https://klharp.github.io/Javascript-UFOs/UFO-level-1/" target="_blank"
 							class="work image-popup" style="background-image: url(images/ufo.png);">
 							<div class="desc">
-								<h3>Bootcamp Javascript Challenge</h3>
+								<h3>Javascript Project</h3>
 								<span>Used JavaScript, HTML, and CSS, and D3.js that created a table dynamically based
 									upon a provided dataset. Users can filter the table data for specific values.</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://klharp.github.io/D3-challenge/" target="_blank" class="work image-popup"
+						<a href="https://klharp.github.io/D3-DataJournalism/" target="_blank" class="work image-popup"
 							style="background-image: url(images/d3.png);">
 							<div class="desc">
-								<h3>Bootcamp D3 Challenge</h3>
-								<span>The data set included with the assignment is based on 2014 ACS 1-year estimates
-									from the US Census Bureau with data on state rates of poverty, age, income,
-									healthcare, obesity, and smoking. D3, Javascript, HTML and CSS were used in this
-									exercise.</span>
+								<h3>D3 Project</h3>
+								<span>Used US Census Bureau  data to investigate health risks of a particular demographic.</span>
 							</div>
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://github.com/klharp/leaflet-challenge" target="_blank" class="work image-popup"
+						<a href="https://github.com/klharp/Leaflet-Visualizing-Data" target="_blank" class="work image-popup"
 							style="background-image: url(images/leaflet.png);">
 							<div class="desc">
-								<h3>Bootcamp Leaflet Challenge</h3>
+								<h3>Leaflet Project</h3>
 								<span>Created a map using Leaflet that plots all of the earthquakes from the data set
 									based on the longitude and latitude. Did not provide a link to GitHub pages due to
-									needing an API key for the mapping. API key is stored in a config.js file and was
-									not pushed to GitHub.</span>
+									needing an API key for the mapping. </span>
 							</div>
 						</a>
 					</div>
@@ -214,7 +210,7 @@
 						<a href="https://github.com/klharp/web-scraping-challenge" target="_blank"
 							class="work image-popup" style="background-image: url(images/webscrape.png);">
 							<div class="desc">
-								<h3>Bootcamp Web Scraping Challenge</h3>
+								<h3>Web Scraping Project</h3>
 								<span>Used MongoDB with Flask templating to create a new HTML page that displays all of
 									the information that was scraped from the URLs.</span>
 							</div>
@@ -224,7 +220,7 @@
 						<a href="https://github.com/klharp/sqlalchemy-challenge" target="_blank"
 							class="work image-popup" style="background-image: url(images/sqlalchemy.png);">
 							<div class="desc">
-								<h3>Bootcamp SQL Alchemy Challenge</h3>
+								<h3>SQL Alchemy Project</h3>
 								<span>Python and SQLAlchemy were used to do basic climate analysis and data exploration
 									of a climate database using SQLAlchemy ORM queries, Pandas, and Matplotlib.</span>
 							</div>
@@ -234,9 +230,9 @@
 						<a href="https://github.com/klharp/sql-challenge" target="_blank" class="work image-popup"
 							style="background-image: url(images/sql.png);">
 							<div class="desc">
-								<h3>Bootcamp SQL Challenge</h3>
+								<h3>SQL Project</h3>
 								<span>Modeled and analyzed data in the provided 6 CSV files, developing an ERD diagram,
-									and importing the CSVs into a SQL database.</span>
+									and imported the CSVs into a SQL database.</span>
 							</div>
 						</a>
 					</div>
@@ -244,9 +240,9 @@
 						<a href="https://github.com/klharp/python-api-challenge" target="_blank"
 							class="work image-popup" style="background-image: url(images/pythonapi.png);">
 							<div class="desc">
-								<h3>Bootcamp Python API Challenge</h3>
+								<h3>Python API Project</h3>
 								<span>A Python script was used to visualize the weather of 500+ randomly chosen cities
-									across the world, at varying distances from the equator. With the data from Part I,
+									across the world, at varying distances from the equator. With the data,
 									the ideal vacation locations were determined using the Google Places API.</span>
 							</div>
 						</a>
@@ -255,8 +251,8 @@
 						<a href="https://github.com/klharp/Matplotlib" target="_blank" class="work image-popup"
 							style="background-image: url(images/matplotlib.png);">
 							<div class="desc">
-								<h3>Bootcamp Matplotlib Challenge</h3>
-								<span>Clean data and generate a summary statistics of the provided datasets</span>
+								<h3>Matplotlib Project</h3>
+								<span>Cleaned data and generated summary statistics of the provided datasets</span>
 							</div>
 						</a>
 					</div>
@@ -264,8 +260,8 @@
 						<a href="https://github.com/klharp/pandas-challenge" target="_blank" class="work image-popup"
 							style="background-image: url(images/pandas.png);">
 							<div class="desc">
-								<h3>Bootcamp Pandas Challenge</h3>
-								<span>Using Pandas and Jupyter Notebook, aggregate the data to observe trends in school
+								<h3>Pandas Project</h3>
+								<span>Using Pandas and Jupyter Notebook, aggregated  data to observe trends in school
 									performance</span>
 							</div>
 						</a>
