--- a/projects.html
+++ b/projects.html
@@ -89,9 +89,9 @@
 							class="work image-popup" style="background-image: url(images/predictor.png);">
 							<div class="desc">
 								<h3>Carbon Emissions Predictor</h3>
-								<span>This project uses machine learning to determine the predictability of carbon
+								<span>Machine learning project to determine the predictability of carbon
 									emissions in the transportation sector if trends in person vehicle and public
-									transportation continues.</span>
+									transportation continue.</span>
 							</div>
 						</a>
 					</div>
@@ -101,7 +101,7 @@
 							style="background-image: url(images/neighborhoods.png);">
 							<div class="desc">
 								<h3>Healthy Neighborhoods Dashboard</h3>
-								<span>This dashboard demonstrated how to integrate Flask with HTML and JavaScript code.
+								<span>This dashboard demonstrates how to integrate Flask with HTML and JavaScript code.
 									This version has been converted to not need a Flask server.</span>
 							</div>
 						</a>
@@ -117,12 +117,40 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="ewc.html" class="work image-popup"
+						<a href="https://public.tableau.com/app/profile/kerry.harp/viz/KH_Citibike_final/Story1" target="_blank" class="work image-popup"
+							style="background-image: url(images/tableau.png);">
+							<div class="desc">
+								<h3>Tableau Dashboard</h3>
+								<span>Used Tableau to create an interactive dashboard using a CitiBike data set.</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="https://klharp.github.io/Web-Visualization-Dashboard/index.html" target="_blank"
+							class="work image-popup" style="background-image: url(images/webvis.png);">
+							<div class="desc">
+								<h3>Web Design Example</h3>
+								<span>Project used a provided weather dataset to build a dashboard.</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="https://klharp.github.io/Javascript-UFOs/UFO-level-1/" target="_blank"
+							class="work image-popup" style="background-image: url(images/ufo.png);">
+							<div class="desc">
+								<h3>Javascript Project</h3>
+								<span>Created a dynamic table dynamically based
+									upon a provided UFO dataset. Users can filter the table data for specific values.</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="ewc.html" target="_blank" class="work image-popup"
 							style="background-image: url(images/wst3.png);">
 							<div class="desc">
 								<h3>Efficient Windows Collaborative</h3>
 								<span>Website and Window Selection Tool to promote energy-efficient fenestration
-									products</span>
+									products.</span>
 							</div>
 						</a>
 					</div>
@@ -141,8 +169,7 @@
 							style="background-image: url(images/plotly.png);">
 							<div class="desc">
 								<h3>Plotly Project</h3>
-								<span>Built an interactive dashboard to explore a given dataset. D3, Plotly, Javascript,
-									HTML, and CSS were used.</span>
+								<span>An interactive dashboard to reveal microbial species present on human beings.</span>
 							</div>
 						</a>
 					</div>
@@ -167,26 +194,6 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://klharp.github.io/Web-Visualization-Dashboard/index.html" target="_blank"
-							class="work image-popup" style="background-image: url(images/webvis.png);">
-							<div class="desc">
-								<h3>Web Design Example</h3>
-								<span>This data visualization dashboard used visualizations previous created in
-									a past Python assignment.</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://klharp.github.io/Javascript-UFOs/UFO-level-1/" target="_blank"
-							class="work image-popup" style="background-image: url(images/ufo.png);">
-							<div class="desc">
-								<h3>Javascript Project</h3>
-								<span>Used JavaScript, HTML, and CSS, and D3.js that created a table dynamically based
-									upon a provided dataset. Users can filter the table data for specific values.</span>
-							</div>
-						</a>
-					</div>
-					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
 						<a href="https://klharp.github.io/D3-DataJournalism/" target="_blank" class="work image-popup"
 							style="background-image: url(images/d3.png);">
 							<div class="desc">
@@ -200,7 +207,7 @@
 							style="background-image: url(images/leaflet.png);">
 							<div class="desc">
 								<h3>Leaflet Project</h3>
-								<span>Created a map using Leaflet that plots all of the earthquakes from the data set
+								<span>Created a map that plots all of the earthquakes from a data set
 									based on the longitude and latitude. Did not provide a link to GitHub pages due to
 									needing an API key for the mapping. </span>
 							</div>
@@ -231,7 +238,7 @@
 							style="background-image: url(images/sql.png);">
 							<div class="desc">
 								<h3>SQL Project</h3>
-								<span>Modeled and analyzed data in the provided 6 CSV files, developing an ERD diagram,
+								<span>Modeled and analyzed data from 6 CSV files, developed an ERD diagram,
 									and imported the CSVs into a SQL database.</span>
 							</div>
 						</a>
@@ -241,7 +248,7 @@
 							class="work image-popup" style="background-image: url(images/pythonapi.png);">
 							<div class="desc">
 								<h3>Python API Project</h3>
-								<span>A Python script was used to visualize the weather of 500+ randomly chosen cities
+								<span>Visualized the weather of 500+ randomly chosen cities
 									across the world, at varying distances from the equator. With the data,
 									the ideal vacation locations were determined using the Google Places API.</span>
 							</div>
@@ -252,7 +259,7 @@
 							style="background-image: url(images/matplotlib.png);">
 							<div class="desc">
 								<h3>Matplotlib Project</h3>
-								<span>Cleaned data and generated summary statistics of the provided datasets</span>
+								<span>Cleaned data and generated summary statistics.</span>
 							</div>
 						</a>
 					</div>
@@ -261,8 +268,8 @@
 							style="background-image: url(images/pandas.png);">
 							<div class="desc">
 								<h3>Pandas Project</h3>
-								<span>Using Pandas and Jupyter Notebook, aggregated  data to observe trends in school
-									performance</span>
+								<span>Using Pandas, aggregated  data to observe trends in school
+									performance.</span>
 							</div>
 						</a>
 					</div>
