--- a/projects.html
+++ b/projects.html
@@ -112,7 +112,7 @@
 							style="background-image: url(images/mg_sample.png);">
 							<div class="desc">
 								<h3>Visualizing EnergyPlus Output Data</h3>
-								<span>Ongoing project to scrap, gather,  analyze, and visualize energy simulations.</span>
+								<span>Ongoing project to scrape, gather,  analyze, and visualize energy simulations.</span>
 							</div>
 						</a>
 					</div>
