fixed link in projects

--- a/projects.html
+++ b/projects.html
@@ -107,7 +107,7 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
-						<a href="https://klharp.github.io/EPlus_Scraper_Maine/index.html"
+						<a href="https://klharp.github.io/Eplus_Maine//index.html"
 							target="_blank" class="work image-popup"
 							style="background-image: url(images/mg_sample.png);">
 							<div class="desc">
