--- a/projects.html
+++ b/projects.html
@@ -117,6 +117,16 @@
 						</a>
 					</div>
 					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
+						<a href="https://klharp.github.io/DYD_Data/"
+							target="_blank" class="work image-popup"
+							style="background-image: url(images/dyd.png);">
+							<div class="desc">
+								<h3>Visualizing Data from BigQuery</h3>
+								<span>Ongoing project to visualize particular data from a 6.7T DYD (Donate Your Data) dataset.</span>
+							</div>
+						</a>
+					</div>
+					<div class="col-md-3 col-sm-6 col-padding text-center animate-box">
 						<a href="https://public.tableau.com/app/profile/kerry.harp/viz/KH_Citibike_final/Story1" target="_blank" class="work image-popup"
 							style="background-image: url(images/tableau.png);">
 							<div class="desc">
